--- a/.github/workflows/vcpkg.yml
+++ b/.github/workflows/vcpkg.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Install 7zip with vcpkg
         shell: bash
         run: |
-          git clone https://github.com/microsoft/vcpkg.git
-          ./vcpkg/bootstrap-vcpkg.bat
+          #git clone https://github.com/microsoft/vcpkg.git
+          #./vcpkg/bootstrap-vcpkg.bat
+          export SystemDrive="$SYSTEMDRIVE"
+          export SystemRoot="$SYSTEMROOT"
+          export windir="$WINDIR"
           vcpkg install 7zip
